--- a/GraficadorSeñales/GraficadorSeñales.csproj
+++ b/GraficadorSeñales/GraficadorSeñales.csproj
@@ -69,10 +69,14 @@
       <DependentUpon>ControlAudio.xaml</DependentUpon>
     </Compile>
     <Compile Include="Muestra.cs" />
+    <Compile Include="OperacionEscalaAmplitud.xaml.cs">
+      <DependentUpon>OperacionEscalaAmplitud.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Señal.cs" />
     <Compile Include="SeñalAudio.cs" />
     <Compile Include="SeñalExponencial.cs" />
     <Compile Include="SeñalParabolica.cs" />
+    <Compile Include="SeñalResultante.cs" />
     <Compile Include="SeñalSenoidal.cs" />
     <Compile Include="SeñalSigno.cs" />
     <Page Include="ConfiguracionSeñalExponencial.xaml">
@@ -99,6 +103,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="OperacionEscalaAmplitud.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
